--- a/package.json
+++ b/package.json
@@ -1,44 +1,48 @@
 {
-  "name": "portfolio",
-  "version": "1.0.0",
-  "private": true,
-  "engines": {
-    "node": ">=16.12.0",
-    "npm": ">=8.1.0"
-  },
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "prepare": "husky install",
-    "lint": "npm run lint:js"
-  },
-  "lint-staged": {
-    "*.{js,vue}": "eslint"
-  },
-  "dependencies": {
-    "@nuxt/content": "^1.14.0",
-    "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.15.1",
-    "nuxt": "^2.15.7",
-    "particles-bg-vue": "^1.3.5",
-    "sass": "^1.43.4",
-    "vue-scrollto": "^2.20.0",
-    "vuetify": "2.6"
-  },
-  "devDependencies": {
-    "@babel/eslint-parser": "^7.14.7",
-    "@nuxtjs/eslint-config": "^6.0.1",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@nuxtjs/vuetify": "^1.12.1",
-    "eslint": "^7.29.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-nuxt": "^2.0.0",
-    "eslint-plugin-vue": "^7.12.1",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.3.2"
-  }
+    "name": "portfolio",
+    "version": "1.0.0",
+    "private": true,
+    "engines": {
+        "node": ">=16.12.0",
+        "npm": ">=8.1.0"
+    },
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate",
+        "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
+        "prepare": "husky install",
+        "lint": "npm run lint:js"
+    },
+    "prettier": "@qgisk/prettier-config",
+    "lint-staged": {
+        "*.{js,vue}": "eslint"
+    },
+    "dependencies": {
+        "@nuxt/content": "^1.14.0",
+        "@nuxtjs/axios": "^5.13.6",
+        "@nuxtjs/tailwindcss": "^4.2.1",
+        "@qgisk/prettier-config": "^0.0.1",
+        "@tailwindcss/typography": "^0.5.0",
+        "core-js": "^3.15.1",
+        "nuxt": "^2.15.7",
+        "particles-bg-vue": "^1.3.5",
+        "sass": "^1.43.4",
+        "vue-scrollto": "^2.20.0",
+        "vuetify": "2.6"
+    },
+    "devDependencies": {
+        "@babel/eslint-parser": "^7.14.7",
+        "@nuxtjs/eslint-config": "^6.0.1",
+        "@nuxtjs/eslint-module": "^3.0.2",
+        "@nuxtjs/vuetify": "^1.12.1",
+        "eslint": "^7.29.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-nuxt": "^2.0.0",
+        "eslint-plugin-vue": "^7.12.1",
+        "husky": "^6.0.0",
+        "lint-staged": "^10.5.4",
+        "prettier": "^2.3.2"
+    }
 }
